# studentsDataBase

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  compile_commands.json  main.cpp  student.cpp  student.h  test.cpp
.cmake/api/v1/reply/: cache-v2-d76278183fd36d83baaf.json  cmakeFiles-v1-a82ebbc9c63ba255a19a.json  codemodel-v2-3b3c72038b4f868cb4c2.json  directory-googletest.googlemock-Debug-0b62987ca12b069e3d2f.json  directory-googletest.googletest-Debug-7b10bbd9acec8bb81a98.json  index-2025-09-17T08-40-25-0951.json  target-gmock-Debug-3fa26fc8f4c9f05726c3.json  target-gmock_main-Debug-a40f03ac23f2c4c7638f.json  target-gtest-Debug-03184a163380e5164127.json  target-gtest_main-Debug-64d45aa1996f5858abd8.json  target-student_database-Debug-96d82478dc5d235d90cd.json  target-student_tests-Debug-11cbe449cb037ff947de.json
.github/: c-cpp.yml
.github/workflows/: cpp-tests.yml
